Add GameOver scene and integrate it into the main game flow; update index and main files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Platformer Starter Kit</title>
+    <title>Game 3</title>
     <script src="./lib/phaser.js"></script>
     <script src="./src/Scenes/Load.js"></script>
     <script src="./src/Scenes/Platformer.js"></script>
+    <script src="./src/Scenes/GameOver.js"></script>
     <script src="./src/main.js"></script>
 </head>
 <body>
