--- a/index.html
+++ b/index.html
@@ -13,5 +13,17 @@
 <body>
     <div id="phaser-game"></div>
     <span id="description"></span>
+    <div id="instructions" style="margin-top:20px; font-family:Arial; color:#222; font-size:18px;">
+        <div style="margin-bottom:10px;">
+            <i>
+                Explore the world of your childhood drawings! Rediscover the wonder, adventure, and surprises you imagined long ago.
+            </i>
+        </div>
+        <b>How to Play:</b><br>
+        Use <b>Arrow keys</b> to move and jump.<br>
+        Collect <b>hearts</b> to regain your childlike wonder, and <b>keys</b> to open <b>doors</b> and <b>chests</b>.<br>
+        Avoid <b>spikes</b>, <b>water</b>, and <b>pencils</b>!<br>
+        Press <b>SPACE</b> to restart after finishing.
+    </div>
 </body>
 </html>
